# File-Searcher

./: File Searcher.py  README.md  pyproject.toml
Program/: File_Searcher.py
advanced_file_searcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scr/: File Searcher.py
